--- a/loja_virtual/paginas/templates/paginas/about.html
+++ b/loja_virtual/paginas/templates/paginas/about.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
 
 {% block content %}
-  <h1>Testestestestestes</h1>
+  <h1>Pagina simples sobre nós</h1>
 {% endblock content %}
