--- a/loja_virtual/paginas/templates/paginas/cadastro.html
+++ b/loja_virtual/paginas/templates/paginas/cadastro.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
 
 {% block content %}
-  <h1>Pagina simples de cadastro de usuário/h1>
+  <h1>Pagina simples de cadastro de usuário</h1>
 {% endblock content %}
